--- a/app/views/genre/show.html.erb
+++ b/app/views/genre/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Genre#show</h1>
-<p>Find me in app/views/genre/show.html.erb</p>
+<h1><%= @genre.name %> Manga</h1>
+<ul>
+  <% @mangas.each do |manga| %>
+    <li><%= link_to manga.title, manga %></li>
+  <% end %>
+</ul>
