Created basic home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Amangas</h1>
 
+<ul>
+  <li><%= link_to("Mangas", mangas_path) %></li>
+  <li><%= link_to("Authors", authors_path) %></li>
+  <li><%= link_to("Genres", genres_path) %></li>
+  <li><a>About Us</a></li> 
+  <li><%= link_to("Orders", orders_path) %></li>
+</ul>
+
+<p>
+    We are the owners of Amangas! Thank you for taking your time and browsing our page.<br>
+    Take a look at our collection, and enjoy yourselves!<br>
+    If you find anything that you think is interesting, feel free to check the ratings and see if it's to your liking.<br>
+    Check this page out if you want to find out more about <a>Amangas</a>!
+</p>
