Added navigation throughout links

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,4 +1,14 @@
 <h1>Genres</h1>
+
+<ul>
+  <li><%= link_to("Home", root_path) %></li>
+  <li><%= link_to("Mangas", mangas_path) %></li>
+  <li><%= link_to("Authors", authors_path) %></li>
+  <li><%= link_to("Genres", genres_path) %></li>
+  <li><a>About Us</a></li> 
+  <li><%= link_to("Orders", orders_path) %></li>
+</ul>
+
 <% @genres.each do |genre| %>
   <li><%= link_to genre.name, genre %></li>
 <% end %>
