--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Author#index</h1>
+
+<ul>
+  <li><%= link_to("Home", root_path) %></li>
+  <li><%= link_to("Mangas", mangas_path) %></li>
+  <li><%= link_to("Authors", authors_path) %></li>
+  <li><%= link_to("Genres", genres_path) %></li>
+  <li><a>About Us</a></li> 
+  <li><%= link_to("Orders", orders_path) %></li>
+</ul>
+
 <p>Find me in app/views/author/index.html.erb</p>
