--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Amangas</h1>
 
 <ul>
+  <li><%= link_to("Home", root_path) %></li>
   <li><%= link_to("Mangas", mangas_path) %></li>
   <li><%= link_to("Authors", authors_path) %></li>
   <li><%= link_to("Genres", genres_path) %></li>
