--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render partial: 'shared/nav' %>
+    <%= render partial: 'shared/search' %>
     <%= yield %>
   </body>
 </html>
