--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,8 +1,14 @@
-<h1>Available Manga</h1>
-
-<ul>
+<h1 class="text-4xl font-semibold text-center p-4">Available Manga</h1>
+<div class="flex justify-center">
+  <div class="grid grid-cols-3 gap-10 list-none text-center">
   <% @mangas.each do |manga| %>
-    <%= image_tag manga.image %>
-    <li><%= link_to manga.title, manga %></li>
+    <%= link_to manga_path(manga) do %>
+      <div class="flex flex-col text-2xl py-4 items-center m-auto">
+        <p class="p-2"><%= image_tag(manga.image, size: "300x600") %></p>
+        <p class="m-2"><%= manga.title %></p>
+        <p class="text-xl">Price: <%= manga.price %></p>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+  </div>
+</div>
