--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= render partial: 'shared/nav' %>
+    <%= render partial: 'shared/banner' %>
     <%= render partial: 'shared/search' %>
-    <%= yield %>
+    <%= render partial: 'shared/nav' %>
+    <div class="max-w-7xl text-2xl max-h-full mx-auto">
+      <%= yield %>
+    </div>
   </body>
 </html>
