--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,1 +1,1 @@
-<div class="text-8xl font-bold underline"><%= link_to "Amangas", root_path %></div>
+<div class="text-7xl text-center p-4"><%= link_to "Amangas", root_path %></div>
