--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,11 @@
-<ul>
-  <li><%= link_to("Home", root_path) %></li>
-  <li><%= link_to("Mangas", mangas_path) %></li>
-  <li><%= link_to("Authors", authors_path) %></li>
-  <li><%= link_to("Genres", genres_path) %></li>
-  <li><%= link_to("About", "/pages/about")%></li>
-  <li><%= link_to("Contact", "/pages/contact")%></li>
-  <li><%= link_to("Orders", orders_path) %></li>
-</ul>
+<div class=" border-solid border-t-2 border-b-2 border-neutral-300 text-xl p-4">
+  <ul class="flex justify-evenly">
+    <li class="bg"><%= link_to("Home", root_path) %></li>
+    <li><%= link_to("Manga", mangas_path) %></li>
+    <li><%= link_to("Authors", authors_path) %></li>
+    <li><%= link_to("Genres", genres_path) %></li>
+    <li><%= link_to("About", "/pages/about")%></li>
+    <li><%= link_to("Contact", "/pages/contact")%></li>
+    <li><%= link_to("Orders", orders_path) %></li>
+  </ul>
+</div>
