--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -5,7 +5,7 @@
     <%= select_tag(:sort_by, options_for_select([['Score', 'score'],
                                             ['Price: Low to High', 'price_asc'],
                                             ['Price: High to Low', 'price_desc'],
-                                            ['Title', 'title']]
+                                            ['Title', 'title']],
                                              params[:sort_by]), class: 'form-control' ) %>
     <%= button_tag "Sort", type: :submit, class: 'btn btn-primary ml-2' %>
     <% end %>
