--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,27 +1,32 @@
 <h1 class="text-4xl font-semibold text-center p-4">Available Manga</h1>
 
 <div class="flex justify-end">
-    <%= form_tag({ controller: 'mangas', action: 'index' }, method: :get) do %>
-    <%= select_tag(:sort_by, options_for_select([['Score', 'score'],
-                                            ['Price: Low to High', 'price_asc'],
-                                            ['Price: High to Low', 'price_desc'],
-                                            ['Title', 'title']],
-                                             params[:sort_by]), class: 'form-control' ) %>
+  <%= form_tag({ controller: 'mangas', action: 'index' }, method: :get) do %>
+    <%= select_tag(:sort_by,
+      options_for_select([
+        ['Score', 'score'],
+        ['Price: Low to High', 'price_asc'],
+        ['Price: High to Low', 'price_desc'],
+        ['Title', 'title'],
+        ['Recently Updated', 'recently_updated'],
+        ['New Products', 'new_products']
+      ], params[:sort_by]),
+      class: 'form-control'
+    ) %>
     <%= button_tag "Sort", type: :submit, class: 'btn btn-primary ml-2' %>
-    <% end %>
-</div>  
-
+  <% end %>
+</div>
 
 <div class="flex justify-center">
   <div class="grid grid-cols-3 gap-10 list-none text-center">
-  <% @mangas.each do |manga| %>
-    <%= link_to manga_path(manga) do %>
-      <div class="flex flex-col text-2xl py-4 items-center m-auto">
-        <p class="p-2"><%= image_tag(manga.image, size: "300x600") %></p>
-        <p class="m-2"><%= manga.title %></p>
-        <p class="text-xl">Price: <%= manga.price %></p>
-      </div>
+    <% @mangas.each do |manga| %>
+      <%= link_to manga_path(manga) do %>
+        <div class="flex flex-col text-2xl py-4 items-center m-auto">
+          <p class="p-2"><%= image_tag(manga.image, size: "300x600") %></p>
+          <p class="m-2"><%= manga.title %></p>
+          <p class="text-xl">Price: <%= manga.price %></p>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
   </div>
 </div>
