Completed cart functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
 
   <body>
     <%= render partial: 'shared/banner' %>
+    <%= render partial: 'cart/cart' %>
     <%= render partial: 'shared/search' %>
     <%= render partial: 'shared/nav' %>
-    <div class="max-w-7xl text-2xl max-h-full mx-auto">
+    <div class="max-w-7xl max-h-full mx-auto">
       <%= yield %>
     </div>
   </body>
