--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,7 +1,7 @@
 <div class="flex justify-end mb-2">
   <%= form_with(url: search_path, method: "get") do |form| %>
-    <%= form.text_field :keyword, placeholder: "Search by keyword" %>
-    <%= form.collection_select :genre_id, Genre.all, :id, :name, { prompt: "Select Genre" } %>
-    <button class="btn font-semibold p-2 px-4 rounded-sm bg-gray-200" type="submit">🔍</button>
+    <%= form.text_field :keyword, placeholder: "Search by keyword", class:"rounded-md" %>
+    <%= form.collection_select :genre_id, Genre.all, :id, :name, { prompt: "Select Genre" }, class:"rounded-md" %>
+    <%= submit_tag("🔍", class: "btn p-2 px-4 rounded-md bg-gray-200 mr-5") %>
   <% end %>
 </div>
