--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,9 +1,10 @@
 <h1 class="text-4xl font-semibold text-center p-4">Available Manga</h1>
-
-<div class="flex justify-end">
+<div class="flex justify-end items-center">
+<p class="mx-2">Sort by:</p>
   <%= form_tag({ controller: 'mangas', action: 'index' }, method: :get) do %>
     <%= select_tag(:sort_by,
       options_for_select([
+        ['None', 'none'],
         ['Score', 'score'],
         ['Price: Low to High', 'price_asc'],
         ['Price: High to Low', 'price_desc'],
@@ -11,27 +12,27 @@
         ['Recently Updated', 'recently_updated'],
         ['New Products', 'new_products']
       ], params[:sort_by]),
-      class: 'form-control'
+      class: 'form-control rounded-md text-sm', onchange: 'this.form.submit();'
     ) %>
-    <%= button_tag "Sort", type: :submit, class: 'btn btn-primary ml-2' %>
   <% end %>
 </div>
-
 <div class="flex justify-center">
   <div class="grid grid-cols-3 gap-10 list-none text-center">
   <% @mangas.each do |manga| %>
-    <div class="flex flex-col text-2xl py-items-center m-auto">
+    <div class="flex flex-col text-2xl py-2 items-center m-auto">
       <%= link_to manga_path(manga) do %>
         <p class="p-2"><%= image_tag(manga.image, size: "300x600") %></p>
         <p class="m-2"><%= manga.title %></p>
       <% end %>
+      <div class="flex flex-col mt-auto">
         <p class="text-xl">Price: <%= manga.price %></p>
-    <%= form_with url: cart_index_path, method: :post do %>
-      <%= hidden_field_tag(:id, manga.id) %>
-      <%= hidden_field_tag(:quantity, 1) %>
-      <%= button_tag 'Add to Cart', class:"py-4" %>
-    <% end %>
+        <%= form_with url: cart_index_path, method: :post do %>
+          <%= hidden_field_tag(:id, manga.id) %>
+          <%= hidden_field_tag(:quantity, 1) %>
+          <%= button_tag 'Add to Cart', class:"text-blue-500 hover:text-blue-600 hover:underline" %>
+        <% end %>
       </div>
+    </div>
   <% end %>
   </div>
 </div>
