--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   </head>
 
   <body>
+    <%= render partial: 'login/login_banner'%>
     <%= render partial: 'shared/banner' %>
-    <%= render partial: 'cart/cart' %>
     <%= render partial: 'shared/search' %>
     <%= render partial: 'shared/nav' %>
     <div class="max-w-7xl max-h-full mx-auto">
