--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -5,12 +5,11 @@
       options_for_select(@addresses.map { |address| ["#{address.street} #{address.city} #{address.postal_code}", address.id] }),
       class: 'form-control rounded-md text-sm'
   ) %>
-<% elsif session["guest_address"] || current_user.present? %>
-  <div>
-    <%= current_user.present? ? current_user.addresses[0].street : session["guest_address"]["street"]%>
-    <%= current_user.present? ? current_user.addresses[0].city : session["guest_address"]["city"]%>,
-    <%= @province.abbreviation %>
-    <%= current_user.present? ? current_user.addresses[0].postal_code : session["guest_address"]["postal_code"]%>
+<% elsif session["guest_address"] || current_user.addresses.present? %>
+  <div class="flex flex-col">
+    <p><%= current_user.present? ? current_user.addresses[0].street : session["guest_address"]["street"]%></p>
+    <p><%= current_user.present? ? current_user.addresses[0].city : session["guest_address"]["city"]%>, <%= @province.abbreviation %></p>
+    <p><%= current_user.present? ? current_user.addresses[0].postal_code : session["guest_address"]["postal_code"]%></p>
   </div>
 <% else %>
   <%= render partial: 'addresses/form'%>
@@ -44,7 +43,7 @@
     <p class="mx-4">Subtotal:</p>
     <%= number_to_currency(@subtotal) %>
     </div>
-    <% if current_user.present? %>
+    <% if current_user.addresses.present? %>
       <% if @pst != 0 %>
       <div class="flex justify-between mx-4">
         <p class="mx-4">PST<%= "(#{number_to_percentage(@pst * 100, precision: 0)}): "%></p>
@@ -75,5 +74,7 @@
   </div>
 </div>
 <div>
-  <%= "Proceed to Checkout" %>
+  <%= form_with url:checkout_create_path, remote: true, data: { turbo: false } do %>
+    <%= button_tag 'Proceed to payment' %>
+  <% end %>
 </div>
