--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,8 @@
 <h1>Order#index</h1>
 
-<p>Find me in app/views/order/index.html.erb</p>
+<% @orders.each do |order| %>
+ <%= order.id %>
+ <%= order.order_number %>
+  <%= order.total %>
+   <%= order.date %>
+<% end %>
