Added Footer Partial
Added Footer code, updated Application Layout file to render footer partial.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%= render partial: 'shared/nav' %>
     <div class="max-w-7xl max-h-full mx-auto">
       <%= yield %>
+      <%= render partial: 'shared/footer' %>
     </div>
   </body>
 </html>
