--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -35,5 +35,5 @@
       <%= link_to "Go to Checkout", checkout_index_path %>
   </div>
 <% else %>
-  <p class="flex mx-auto">Your cart is empty</p>
+  <p class="flex mx-2 my-4">Your cart is empty</p>
 <% end %>
