--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -1,12 +1,68 @@
-<p>Payment successful</p>
-<p>Your order is being processed!</p>
-<p>Thank you for your purchase.</p>
-<p>An email will be sent out for your records.</p>
-<% if !current_user.present? %>
-<p>Make checkout easier next time! Register for an account
-<%= link_to "here", new_user_registration_path  %></p>
+<%= "DEBUG #{@session.amount_total  * @order.taxes_rate }"%>
+<%= @order.taxes_rate %>
+<%= @session.amount_total / 100.00 * @order.taxes_rate %>
+<div class="container p-4 mx-4">
+  <p class="text-3xl font-bold text-center my-2">Order confirmed!</p>
+  <div>
+    <p class="text-xl">Order Number: <%= @order.order_number %></p>
+  </div>
+  <p>Your order is being processed!</p>
+  <p>Thank you for your purchase.</p>
+  <p>An email will be sent out to confirm your purchase.</p>
+  <% if !current_user.present? %>
+    <p>Make checkout easier next time! Register for an account
+    <%= link_to "here", new_user_registration_path  %></p>
+  <% end %>
+</div>
+<div class="text-2xl mx-2 my-2">
+Invoice
+</div>
+<div class="p-4">
+<div class="flex justify-between text-xl border-b-2">
+  <p class="mx-2">Item</p>
+  <p class="mx-2">Price</p>
+</div>
+<% @items.each do |manga| %>
+<div class="flex justify-between items-center">
+  <div class="flex flex-col mx-2 p-4" >
+    <div class="flex">
+      <%= link_to image_tag(manga.image, size: "100x200"), manga_path(manga) %>
+      <div class="flex flex-col mx-4 justify-between">
+        <p class="text-lg"><%= link_to manga.title, manga_path(manga) %></p>
+        <p class="text-sm">By: <%= link_to manga.author.name, author_path(manga), class: "text-blue-600 hover:text-blue-800 hover:underline" %></p>
+        <div class="flex flex-row items-center">
+        <% @order_details.each do |detail| %>
+          <% if detail.manga_id == manga.id %>
+            <p class="text-sm"><%= "Qty: x#{detail.quantity}" %></p>
+          <% end %>
+        <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% @order_details.each do |detail| %>
+    <% if detail.manga_id == manga.id %>
+      <p class="mx-4 text-lg"><%= number_to_currency(detail.price * detail.quantity) %></p>
+    <% end %>
+  <% end %>
+ </div>
 <% end %>
-<div>
-  <p>Order Confirmation</p>
-  <p>Order Number: <%= @order.order_number %></p>
+<div class="flex justify-end border-t-2">
+  <div class="flex flex-col">
+    <div class="flex justify-between mx-4">
+      <p class="mx-4 my-2">Subtotal:</p>
+      <%= number_to_currency(@order.total - @order.tax_price) %>
+    </div>
+    <div class="flex justify-between mx-4">
+      <p class="mx-4">PST/GST/HST<%= "(#{number_to_percentage(@order.taxes_rate * 100, precision: 0)}): "%></p>
+      <%= number_to_currency(@order.taxes_rate * (@order.total - @order.tax_price)) %>
+    </div>
+    <div class="border-t-2">
+      <div class="flex justify-between mx-4 ">
+        <p class="mx-4 my-2">Total:</p>
+        <%= number_to_currency(@order.total) %>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
