--- a/app/views/login/_login_banner.html.erb
+++ b/app/views/login/_login_banner.html.erb
@@ -1,10 +1,12 @@
 
 <% if user_signed_in? %>
-<div class="flex max-w-7xl justify-between mx-auto py-2 text-xl items-center">
-  Welcome <%= current_user.email %>
-  <div class="flex items-center text-xl ">
+<div class="flex justify-between mx-auto py-2 bg-slate-900 text-yellow-500 items-center font-semibold">
+  <p class="mx-2 ml-10 text-white">Welcome</p>
+   <p class="mr-auto"><%= current_user.email %></p>
+  <div class="flex items-center ">
+    <p class="mx-4 text-sky-500 hover:text-sky-400 hover:underline"><%= link_to("My Orders", orders_path) %></p>
     <%= render partial: 'cart/cart' %>
-    <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "mx-4" %>
+    <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "mx-4 text-sky-500 hover:text-sky-400 hover:underline" %>
   </div>
 </div>
 <div class="flex max-w-7xl mx-auto justify-end">
@@ -12,11 +14,12 @@
   <p class="alert"><%= alert %></p>
 </div>
 <% else %>
-<div class="flex max-w-7xl justify-between mx-auto py-2 text-xl items-center">
-  Welcome Guest!
+<div class="flex justify-between mx-auto py-2 bg-slate-900 text-yellow-500 items-center font-semibold">
+  <p class="mx-2 ml-10 text-white">Welcome</p>
+  <p class="mr-auto">Guest!</p>
   <div class="flex items-center text-xl ">
     <%= render partial: 'cart/cart' %>
-    <%= button_to "Sign in", new_user_session_path, class: "mx-4" %>
+    <%= button_to "Sign in", new_user_session_path, class: "mx-4 mr-10 text-sky-500 hover:text-sky-400 hover:underline" %>
   </div>
 </div>
 <% end %>
