--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,25 +1,23 @@
 <%= form_with url: addresses_path, method: :post do |form| %>
-  <div>
-    <%= form.label :street %>
-    <%= form.text_field :street %>
-  </div>
-
-  <div>
-    <%= form.label :city %>
-    <%= form.text_field :city %>
-  </div>
-
-  <div>
-    <%= form.label :postal_code %>
-    <%= form.text_field :postal_code %>
-  </div>
-
-  <div>
-    <%= form.label :province_id %>
-    <%= form.collection_select(:province_id, @provinces, :id, :abbreviation, prompt: 'Select Province') %>
-  </div>
-
-  <div>
-    <%= form.submit 'Add Address' %>
-  </div>
+  <div class="container w-80 flex flex-col p-3">
+    <div class="flex justify-between items-center mx-4 mb-4">
+      <%= form.label :street, class: "w-1/4" %>
+      <%= form.text_field :street, class: "w-3/4 px-2 rounded-md" %>
+    </div>
+    <div class="flex justify-between items-center mx-4 mb-4">
+      <%= form.label :city, class: "w-1/4" %>
+      <%= form.text_field :city, class: "w-3/4 px-2 rounded-md" %>
+    </div>
+    <div class="flex justify-between items-center mx-4 mb-4">
+      <%= form.label :postal_code, class: "w-1/4" %>
+      <%= form.text_field :postal_code, class: "w-3/4 px-2 rounded-md" %>
+    </div>
+    <div class="flex justify-between items-center mx-4 mb-4">
+      <%= form.label :province_id, class: "w-3/4" %>
+      <%= form.collection_select(:province_id, @provinces, :id, :abbreviation, {}, { class: 'w-1/4 px-2 rounded-md' }) %>
+    </div>
+    <div class="text-end">
+      <%= form.submit 'Add Address', class: "bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-md" %>
+    </div>
+</div>
 <% end %>
