--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,11 +1,13 @@
 <h1 class="text-4xl font-semibold text-center p-4">Checkout</h1>
-<p>Ship To:</p>
+<div class="flex justify-between text-xl border-b-2 mb-2">
+<p class="mx-2">Ship To</p>
+</div>
 <% if current_user.present? %>
   <% if current_user.addresses.present? %>
-    <div class="flex flex-col">
-      <p><%= current_user.addresses[0].street %></p>
-      <p><%= "#{current_user.addresses[0].city}, #{@province.abbreviation}" %></p>
-      <p><%= current_user.addresses[0].postal_code %></p>
+    <div class="flex flex-col mb-4 p-2">
+      <p class="mx-2"><%= current_user.addresses[0].street %></p>
+      <p class="mx-2"><%= "#{current_user.addresses[0].city}, #{@province.abbreviation}" %></p>
+      <p class="mx-2"><%= current_user.addresses[0].postal_code %></p>
     </div>
   <% else %>
     <%= render partial: 'addresses/form' %>
@@ -81,10 +83,10 @@
       <% end %>
   </div>
 </div>
-<div>
-<% if session["checkout_address"].present? %>
-  <%= form_with url:checkout_create_path, remote: true, data: { turbo: false } do %>
-    <%= button_tag 'Proceed to payment' %>
-  <% end %>
+<div class="flex justify-center p-4">
+  <% if session["checkout_address"].present? %>
+    <%= form_with url:checkout_create_path, remote: true, data: { turbo: false } do %>
+      <%= button_tag 'Proceed to payment', class: "bg-yellow-400 hover:bg-yellow-600 text-black font-bold px-4 py-2 rounded-md"%>
+    <% end %>
   <% end %>
 </div>
