--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -1,19 +1,32 @@
-<%= image_tag @manga.image %>
-<h3><%= @manga.title %></h3>
-<li>Author: <%= link_to @manga.author.name, @manga.author%></li>
-<li>Genres:
-<% @manga.genres.each do |genre| %>
-  <%= link_to genre.name, genre %>
-<% end %>
-</li>
-<li>Date Published: <%= @manga.publish_date %></li>
-<li>Status: <%= @manga.status %></li>
-<li>User Score: <%= @manga.score %></li>
-<li>Price: <%= @manga.price %></li>
-<li>Synopsis: <%= @manga.description %></li>
+<div class="container mx-auto flex p-4">
+  <div class="flex-shrink-0 ">
+    <%= image_tag @manga.image %>
+  </div>
 
-
-
-
-
-
+  <div class="flex flex-col flex-grow ml-8">
+    <h3 class="text-2xl font-semibold"><%= @manga.title %></h3>
+    <div class= "flex">
+    Author:
+    <p class="mx-2 text-blue-600 hover:text-blue-900 hover:underline"><%= link_to @manga.author.name, @manga.author %></p>
+    </div>
+    <p>Genres:
+      <div class="flex">
+        <% @manga.genres.each do |genre| %>
+          <p class="mr-2 text-blue-600 hover:text-blue-900 hover:underline"><%= link_to genre.name, genre %></p>
+        <% end %>
+      </div>
+    </p>
+    <p>Date Published: <%= @manga.publish_date %></p>
+    <p>Status: <%= @manga.status %></p>
+    <p>User Score: <%= @manga.score %></p>
+    <p>Price: <%= @manga.price %></p>
+    <p>Synopsis: <%= @manga.description %></p>
+    <div class="flex flex-auto text-lg text-white mt-8 ml-auto bg-emerald-800 p-4 px-10 rounded-full hover:bg-emerald-600">
+      <%= form_with url: cart_index_path, method: :post do %>
+        <%= hidden_field_tag(:id, @manga.id) %>
+        <%= hidden_field_tag(:quantity, 1) %>
+        <%= button_tag 'Add to Cart', class: "text-white" %>
+      <% end %>
+    </div>
+  </div>
+</div>
