--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-end mb-2">
+<div class="flex justify-end pb-4">
   <%= form_with(url: search_path, method: "get") do |form| %>
     <%= form.text_field :keyword, placeholder: "Search by keyword", class:"rounded-md" %>
     <%= form.collection_select :genre_id, Genre.all, :id, :name, { prompt: "Select Genre" }, class:"rounded-md" %>
