--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,3 +1,4 @@
+<div class="p-4">
 <h1 class="text-4xl font-semibold text-center p-4">My Cart</h1>
 <div class="flex justify-between text-xl border-b-2">
   <p class="mx-2">Item</p>
@@ -28,12 +29,13 @@
       <p class="mx-4"><%= number_to_currency(manga.price * session[:shopping_cart][manga.id.to_s]["quantity"].to_i) %></p>
   </div>
   <% end %>
-  <div class="flex justify-end border-t-2">
-    <p class="mx-4">Subtotal: <%= number_to_currency(@subtotal) %></p>
+  <div class="flex justify-end border-t-2 ">
+    <p class="mx-4 my-2">Subtotal: <%= number_to_currency(@subtotal) %></p>
   </div>
-  <div class="text-center p-4">
-      <%= link_to "Go to Checkout", checkout_index_path %>
+  <div class="text-center bg-yellow-400 hover:bg-yellow-600 text-black font-bold px-4 py-2 rounded-md">
+      <%= link_to "Checkout", checkout_index_path %>
   </div>
 <% else %>
   <p class="flex mx-2 my-4">Your cart is empty</p>
 <% end %>
+</div>
