--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -83,10 +83,10 @@
       <% end %>
   </div>
 </div>
-<div class="flex justify-center p-4">
+<div class="p-4">
   <% if session["checkout_address"].present? %>
     <%= form_with url:checkout_create_path, remote: true, data: { turbo: false } do %>
-      <%= button_tag 'Proceed to payment', class: "bg-yellow-400 hover:bg-yellow-600 text-black font-bold px-4 py-2 rounded-md"%>
+      <%= button_tag 'Proceed to payment', class: "w-full bg-yellow-400 hover:bg-yellow-600 text-black font-bold px-4 py-2 rounded-md"%>
     <% end %>
   <% end %>
 </div>
