--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -1,6 +1,3 @@
-<%= "DEBUG #{@session.amount_total  * @order.taxes_rate }"%>
-<%= @order.taxes_rate %>
-<%= @session.amount_total / 100.00 * @order.taxes_rate %>
 <div class="container p-4 mx-4">
   <p class="text-3xl font-bold text-center my-2">Order confirmed!</p>
   <div>
@@ -55,10 +52,10 @@ Invoice
     </div>
     <div class="flex justify-between mx-4">
       <p class="mx-4">PST/GST/HST<%= "(#{number_to_percentage(@order.taxes_rate * 100, precision: 0)}): "%></p>
-      <%= number_to_currency(@order.taxes_rate * (@order.total - @order.tax_price)) %>
+      <%= number_to_currency(@session.amount_total / 100.00 * @order.taxes_rate ) %>
     </div>
     <div class="border-t-2">
-      <div class="flex justify-between mx-4 ">
+      <div class="flex justify-between items-center mx-4 ">
         <p class="mx-4 my-2">Total:</p>
         <%= number_to_currency(@order.total) %>
       </div>
