--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body class="bg-slate-200">
     <div class="bg-gradient-to-br from-emerald-800 to-emerald-200">
-      <%= render partial: 'login/login_banner'%>
+      <%= render partial: 'shared/login_banner'%>
       <%= render partial: 'shared/banner' %>
       <%= render partial: 'shared/search' %>
     </div>
