--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,3 +1,4 @@
+<div class="p-4">
 <h1 class="text-4xl font-semibold text-center p-4">Checkout</h1>
 <div class="flex justify-between text-xl border-b-2 mb-2">
 <p class="mx-2">Ship To</p>
@@ -13,10 +14,10 @@
     <%= render partial: 'addresses/form' %>
   <% end %>
 <% elsif session["guest_address"].present? %>
-  <div class="flex flex-col">
-    <p><%= session["guest_address"]["street"] %></p>
+  <div class="flex flex-col mx-4">
+    <p class="my-2"><%= session["guest_address"]["street"] %></p>
     <p><%= "#{session["guest_address"]["city"]}, #{@province.abbreviation}" %></p>
-    <p><%= session["guest_address"]["postal_code"] %></p>
+    <p class="my-2"><%= session["guest_address"]["postal_code"] %></p>
   </div>
 <% else %>
   <%= render partial: 'addresses/form' %>
@@ -24,7 +25,7 @@
 <%= render partial: 'shared/manga_list_checkout' %>
 <div class="flex justify-end border-t-2">
   <div class="flex flex-col">
-   <div class="flex justify-between mx-4">
+   <div class="flex justify-between mx-4 my-2">
     <p class="mx-4">Subtotal:</p>
     <%= number_to_currency(@subtotal) %>
     </div>
@@ -36,18 +37,18 @@
       </div>
       <% end %>
       <% if @hst != 0 %>
-      <div class="flex justify-between mx-4">
+      <div class="flex justify-between mx-4 my-2">
         <p class="mx-4">HST<%= "(#{number_to_percentage(@hst * 100, precision: 0)}): "%></p>
         <%= number_to_currency(@hst * @subtotal) %>
       </div>
       <% end %>
       <% if @gst != 0%>
-      <div class="flex justify-between mx-4">
+      <div class="flex justify-between mx-4 my-2">
         <p class="mx-4">GST<%= "(#{number_to_percentage(@gst * 100, precision: 0)}): "%></p>
         <%= number_to_currency(@gst * @subtotal) %>
       </div>
       <% end %>
-      <div class="border-t-2">
+      <div class="border-t-2 my-2">
         <div class="flex justify-between mx-4 ">
           <p class="mx-4">Total:</p>
           <%= number_to_currency(@subtotal * (@pst + @gst + @hst) + @subtotal) %>
@@ -61,19 +62,19 @@
       </div>
       <% end %>
       <% if @hst != 0 %>
-      <div class="flex justify-between mx-4">
+      <div class="flex justify-between mx-4 my-2">
         <p class="mx-4">HST<%= "(#{number_to_percentage(@hst * 100, precision: 0)}): "%></p>
         <%= number_to_currency(@hst * @subtotal) %>
       </div>
       <% end %>
       <% if @gst != 0%>
-      <div class="flex justify-between mx-4">
+      <div class="flex justify-between mx-4 my-2">
         <p class="mx-4">GST<%= "(#{number_to_percentage(@gst * 100, precision: 0)}): "%></p>
         <%= number_to_currency(@gst * @subtotal) %>
       </div>
       <% end %>
       <div class="border-t-2">
-        <div class="flex justify-between mx-4 ">
+        <div class="flex justify-between mx-4 my-2">
           <p class="mx-4">Total:</p>
           <%= number_to_currency(@subtotal * (@pst + @gst + @hst) + @subtotal) %>
         </div>
@@ -89,4 +90,5 @@
       <%= button_tag 'Proceed to payment', class: "w-full bg-yellow-400 hover:bg-yellow-600 text-black font-bold px-4 py-2 rounded-md"%>
     <% end %>
   <% end %>
+</div>
 </div>
