--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,7 +2,7 @@
 <div class="flex justify-center">
   <ul class="grid grid-cols-5 gap-2 list-none text-center">
   <% @genres.each do |genre| %>
-    <li class="p-2 m-2"><%= link_to genre.name, genre %></li>
+    <li class="p-2 m-2"><%= link_to genre.name, genre, class: "text-blue-600 hover:text-blue-900 hover:underline" %></li>
   <% end %>
   </ul>
 </div>
