--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
 
 
-<p class="">
+<p class="p-4">
     We are the owners of Amangas! Thank you for taking your time and browsing our page.<br/>
     Take a look at our collection, and enjoy yourselves!<br/>
     If you find anything that you think is interesting, feel free to check the ratings and see if it's to your liking.<br/>
-    Check this page out if you want to find out more about <%= link_to("Amangas", "/pages/about")%>!
 </p>
