--- a/app/views/shared/_login_banner.html.erb
+++ b/app/views/shared/_login_banner.html.erb
@@ -9,9 +9,13 @@
     <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "mx-4 text-sky-500 hover:text-sky-400 hover:underline" %>
   </div>
 </div>
-<div class="flex max-w-7xl mx-auto justify-end">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+<div class="flex justify-end">
+<% if notice.present? %>
+  <p class="notice p-3 mx-4 font-semibold text-green-700 bg-gray-300 rounded-lg"><%= notice %></p>
+<% end %>
+<% if alert.present? %>
+  <p class="alert p-3 mx-4 font-semibold text-red-700 bg-gray-200 rounded-lg"><%= alert %></p>
+<% end %>
 </div>
 <% else %>
 <div class="flex justify-between mx-auto py-2 bg-slate-900 text-yellow-500 items-center font-semibold">
