--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,8 +1,8 @@
 <div class=" bg-slate-700  text-white font-bold p-3">
   <ul class="flex justify-evenly">
     <li class="hover:text-cyan-400"><%= link_to("Home", root_path) %></li>
-    <li class="hover:text-cyan-400"><%= link_to("Manga", mangas_path) %></li>
-    <li class="hover:text-cyan-400"><%= link_to("Authors", authors_path) %></li>
+    <li class="hover:text-cyan-400"><%= link_to("Browse Manga", mangas_path) %></li>
+    <li class="hover:text-cyan-400"><%= link_to("Works by Author", authors_path) %></li>
     <li class="hover:text-cyan-400"><%= link_to("Genres", genres_path) %></li>
   </ul>
 </div>
