--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -8,7 +8,7 @@
   <p>An email will be sent out to confirm your purchase.</p>
   <% if !current_user.present? %>
     <p>Make checkout easier next time! Register for an account
-    <%= link_to "here", new_user_registration_path  %></p>
+    <%= link_to "here", new_user_registration_path, class: "text-blue-500 hover:text-blue-400 hover:underline"  %></p>
   <% end %>
 </div>
 <div class="text-2xl mx-2 my-2">
