--- a/app/views/shared/_manga_list_checkout.html.erb
+++ b/app/views/shared/_manga_list_checkout.html.erb
@@ -8,7 +8,7 @@
     <div class="flex flex-col mx-2 p-4" >
       <div class="flex">
         <%= link_to image_tag(manga.image, size: "100x200"), manga_path(manga) %>
-        <div class="flex flex-col mx-4 justify-between">
+        <div class="flex flex-col m-4">
           <p class="text-2xl"><%= link_to manga.title, manga_path(manga) %></p>
           <p class="text-md">By: <%= link_to manga.author.name, author_path(manga), class: "text-blue-600 hover:text-blue-800 hover:underline" %></p>
           <div class="flex flex-row items-center">
